[package]
name = "vms"
version = "0.1.0"
authors = ["myduomilia <myduomilia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
log = "0.4.11"
async-std = "1.6.3"
async-channel = "1.4.1"
futures = "0.3.5"